<resources>
    <string name="app_name">immo_estimation</string>
    <string name="logo">Icon</string>
    <string name="description">Estimation du prix immobilier de Saint-Etienne-du-Rouvray :</string>
    <string name="desc_batiment">surface batiment :</string>
    <string name="desc_terrain">surface terrain :</string>
    <string name="info_surface">en m2</string>
    <string name="desc_local">Maison ou Appart :</string>
    <string name="error">Les données saisies sont érronées</string>
    <string name="desc_nb_pieces">nombre de pièces :</string>
    <string name="info_nb_pieces">nb de pièces</string>
    <string name="send">envoyer</string>
    <string name="result">(Estimation)</string>
    <string name="unite">€</string>
    <string name="back">retour</string>
    <string name="info_local">M ou A :</string>
</resources>