<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#DCDCDC">

    <!-- Logo of the application. -->
    <ImageView
        android:contentDescription="@string/logo"
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_immo_foreground"
        android:layout_gravity="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <!-- text who explain the purpose of the application. -->
    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <!-- Object containing the information and the EditText for put 'surface batiment'. -->
    <LinearLayout
        android:id="@+id/block_batiment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/desc_batiment"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:text="@string/desc_batiment"
            android:textSize="20sp" />

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <EditText
            android:id="@+id/data_batiment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="0"
            android:hint="@string/info_surface"
            android:inputType="number"
            android:textSize="20sp" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <!-- Object containing the information and the EditText to insert 'surface . -->
    <LinearLayout
        android:id="@+id/block_terrain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/desc_terrain"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:text="@string/desc_terrain"
            android:textSize="20sp" />

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <EditText
            android:id="@+id/data_terrain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="0"
            android:hint="@string/info_surface"
            android:inputType="number"
            android:textSize="20sp"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <!-- Object containing the information and the EditText for put data 3. -->
    <LinearLayout
        android:id="@+id/block_nb_pieces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/desc_nb_pieces"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:text="@string/desc_nb_pieces"
            android:textSize="20sp" />

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <EditText
            android:id="@+id/data_nb_pieces"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="0"
            android:hint="@string/info_nb_pieces"
            android:inputType="number"
            android:textSize="20sp" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/goToEstimate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#524E4E"
        android:backgroundTintMode="screen"
        android:text="@string/send" />

</LinearLayout>